New readme commands and files